tests/fixtures/errors/missing_name.sysml
package Test {
    part 123invalid;
}
